[package]
authors = ["Scott MacDonald <scott@smacdo.com>"]
categories = ["command-line-utilities"]
description = "Command line tool to lock your desktop session"
edition = "2021"
keywords = ["cli", "library", "program"]
license = "Apache-2.0"
name = "screenlocker"
readme = "README.md"
repository = "https://github.com/smacdo/screenlocker"
version = "0.3.0"

[lib]
crate-type = ["lib"]

[[bin]]
name = "screenlocker"

[dependencies]
