[package]
authors = ["Scott MacDonald <scott@smacdo.com>"]
categories = ["command-line-utilities"]
description = "Reusable library and command line tool to lock your desktop session"
edition = "2021"
keywords = ["cli", "screenlocker", "lockscreen"]
license = "Apache-2.0"
name = "screenlocker"
readme = "README.md"
repository = "https://github.com/smacdo/screenlocker"
version = "0.3.1"

[lib]
crate-type = ["lib"]

[[bin]]
name = "screenlocker"

[dependencies]
